<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/cloud" >

        <Button
            android:id="@+id/btnConferma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etxInsComune"
            android:layout_below="@+id/etxInsComune"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/strConferma" />

        <ImageView
            android:id="@+id/imgric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/riciclo_img"
            android:src="@drawable/riciclo_t" />

        <EditText
            android:id="@+id/etxInsComune"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgric"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/strComune" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_ricerca"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/etxInsComune"
            android:layout_alignBottom="@+id/etxInsComune"
            android:layout_alignRight="@+id/etxInsComune"
            android:text="@string/Cerca" />

        <ImageButton
            android:id="@+id/imginfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ricordacheck"
            android:layout_centerHorizontal="true"
            android:background="@drawable/info"
            android:contentDescription="@string/btguida"
            android:src="@drawable/info" />

        <CheckBox
            android:id="@+id/ricordacheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/imginfo"
            android:layout_below="@+id/btnConferma"
            android:text="@string/ricordacitta" />

</RelativeLayout>

